種別で[その他]を選んだ場合は、フリーテキストの⼊⼒ができるようにする。

--- a/lang/ja.json
+++ b/lang/ja.json
@@ -71,5 +71,6 @@
     "Created by:": "入力者: ",
     "Created on:": "入力日:",
     "Register": "登録",
-    "Update your account's profile information and email address.": "アカウントのプロフィール情報と電子メール アドレスを更新します。"
+    "Update your account's profile information and email address.": "アカウントのプロフィール情報と電子メール アドレスを更新します。",
+    "Free Text:": "フリーテキスト:"
 }
