[遅刻]と[早退]を選んだ時に時間を⼊⼒できるように

--- a/lang/ja.json
+++ b/lang/ja.json
@@ -72,5 +72,7 @@
     "Created on:": "入力日:",
     "Register": "登録",
     "Update your account's profile information and email address.": "アカウントのプロフィール情報と電子メール アドレスを更新します。",
-    "Free Text:": "フリーテキスト:"
+    "Free Text:": "フリーテキスト:",
+    "Arrive Late:": "遅刻タイム:",
+    "Leave Early:": "早退タイム:"
 }
