Adjusted Headers and language

--- a/lang/ja.json
+++ b/lang/ja.json
@@ -77,5 +77,6 @@
     "Leave Early:": "早退タイム:",
     "Event Created": "カレンダイベントを作りました!",
     "You added your event on the Google Calendar.": "Googleカレンダーにイベントを追加しました。",
-    "Would you like to create another event?": "別のイベントを作成しますか？"
+    "Would you like to create another event?": "別のイベントを作成しますか？",
+    "'s Attendance Form": "の勤怠事前報告フォーム"
 }
