入力者:を対象者にした

--- a/lang/ja.json
+++ b/lang/ja.json
@@ -68,8 +68,8 @@
     "Type:": "種別:",
     "Please select": "選択してください",
     "Other Remarks:": " その他備考:",
-    "Created by:": "入力者: ",
-    "Created on:": "入力日:",
+    "Created by: ": "対象者: ",
+    "Created on: ": "入力日:",
     "Register": "登録",
     "Update your account's profile information and email address.": "アカウントのプロフィール情報と電子メール アドレスを更新します。",
     "Free Text:": "フリーテキスト:",
