--- a/lang/ja.json
+++ b/lang/ja.json
@@ -80,5 +80,6 @@
     "Would you like to create another event?": "別のイベントを作成しますか？",
     "'s Attendance Form": "の勤怠事前報告フォーム",
     "Free Text is required for 'Other' option.": "「その他」オプションにはフリーテキストが必要です。",
-    "An orange letter m as a logo": "ロゴはオレンジ色のM"
+    "An orange letter m as a logo": "ロゴはオレンジ色のM",
+    "Copy": "コピー"
 }
